l10n: fa, updated main.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109490 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/main.lang
+++ b/fa/main.lang
@@ -418,16 +418,17 @@
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+بخشی از این محتویات ©1998–%(current_year) توسط مشارکت‌کنندگان انفرادی mozilla.org ایجاد شده است. محتویات براساس <a href="%(url)s">گواهینامه Creative Commons</a> موجود است.
+
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+کمک به این صفحه
 
 
 # Top menu item
 ;Mission
-Mission
+ماموریت
 
 
