Translated missing strings into Bosnian
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109495 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bs/main.lang
+++ b/bs/main.lang
@@ -3,7 +3,7 @@ Navigacija
 
 
 ;Press area
-Press Area {ok}
+Press odjeljenje
 
 
 ;About
@@ -408,26 +408,26 @@ Podržani uređaji
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Šta je novo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privatnost
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Dijelovi ovog sadržaja su ©1998–%(current_year)s od strane pojedinih mozilla.org doprinosilaca. Sadržaj je dostupan pod a <a href="%(url)s">Creative Commons licencom</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Doprinesite ovoj stranici
 
 
 # Top menu item
 ;Mission
-Mission
+Misija
 
 
