--- a/bs/whatsnew.lang
+++ b/bs/whatsnew.lang
@@ -62,38 +62,38 @@ Android Robot je reproduciran iz rada koji je kreirao i <a href="%s">podijelio G
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Preuzmite Firefox za Android</a> i uzmite moć Weba u svoje ruke. On je brz, pametan i siguran!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+A sada preuzmite mobilni browser koji vas podržava
 
 
 ;Firefox Features
-Firefox Features
+Firefox mogućnosti
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Dobrodošli u Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox pomoć
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox za Android umjetnički radovi
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Brz. Pametan. Siguran.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Preuzmite mobilni browser koji vas podržava.
 
 
