--- a/ru/main.lang
+++ b/ru/main.lang
@@ -418,16 +418,16 @@ Mozilla Firefox. Доступ к современному Интернету с 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Части этого содержимого созданы участниками проекта mozilla.org ©1998–%(current_year)s. Содержимое доступно на условиях <a href="%(url)s">лицензии Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Принять участие в проекте
 
 
 # Top menu item
 ;Mission
-Mission
+Миссия
 
 
