--- a/zh-TW/download.lang
+++ b/zh-TW/download.lang
@@ -31,7 +31,7 @@
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-歡迎使用唯一 <em>把您放在第一線</em> 的瀏覽器。
+歡迎使用唯一 <em>把您置於最優先</em> 的瀏覽器。
 
 
 ;Mozilla Firefox Web Browser
