add contribute page email templates for additional locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109515 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bs/mozorg/contribute-form.lang
+++ b/bs/mozorg/contribute-form.lang
@@ -38,3 +38,11 @@ Your CAPTCHA response did not match. Please try again.
 
 ;Thank you for getting in touch.
 Thank you for getting in touch.
+
+
+;Thank you for getting in touch! You will hear from us soon.
+Thank you for getting in touch! You will hear from us soon.
+
+
+;Submitting data, please wait...
+Submitting data, please wait...
