--- a/bs/main.lang
+++ b/bs/main.lang
@@ -431,3 +431,115 @@ Doprinesite ovoj stranici
 Misija
 
 
+
+
+;Systems Administration
+Systems Administration
+
+
+;User Research
+User Research
+
+
+;Localization and Translation
+Localization and Translation
+
+
+;Please enter a valid email address
+Please enter a valid email address
+
+
+;Get Firefox news
+Get Firefox news
+
+
+;Accessibility
+Accessibility
+
+
+;YOUR EMAIL HERE
+YOUR EMAIL HERE
+
+
+;Sorry. This number isn't valid. Please enter a U.S. phone number or <a href="%s">download directly from Google Play.</a>
+Sorry. This number isn't valid. Please enter a U.S. phone number or <a href="%s">download directly from Google Play.</a>
+
+
+;Area of interest?
+Area of interest?
+
+
+;I need help with a Firefox issue
+I need help with a Firefox issue
+
+
+;An error occurred in our system. Please try again later.
+An error occurred in our system. Please try again later.
+
+
+;I have a suggestion for Firefox
+I have a suggestion for Firefox
+
+
+;Facebook
+Facebook
+
+
+;Education
+Education
+
+
+;Firefox Affiliates
+Firefox Affiliates
+
+
+;Developer Documentation
+Developer Documentation
+
+
+;Mozilla
+Mozilla
+
+
+;Thank you for signing up!
+Thank you for signing up!
+
+
+;Menu
+Menu
+
+
+;Web Development
+Web Development
+
+
+;You must agree to the privacy policy
+You must agree to the privacy policy
+
+
+;Visual Design
+Visual Design
+
+
+;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+
+
+;Twitter
+Twitter
+
+
+;We are sorry, but there was a problem with our system. Please try again later!
+We are sorry, but there was a problem with our system. Please try again later!
+
+
+;Other
+Other
+
+
+;Marketing
+Marketing
+
+
+;Testing and QA
+Testing and QA
