--- a/bs/upgradedialog.lang
+++ b/bs/upgradedialog.lang
@@ -26,3 +26,71 @@ Mnogo brži od Firefoxa 3.6
 Bolji nego ikad prije
 
 
+
+
+;enjoy greater customization
+enjoy greater customization
+
+
+;There’s a new version of Firefox that can better protect you against online attacks.
+There’s a new version of Firefox that can better protect you against online attacks.
+
+
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;experience faster performance
+experience faster performance
+
+
+;URGENT!
+URGENT!
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
+
+
+;Upgrading your <a %s>operating system</a>
+Upgrading your <a %s>operating system</a>
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installing a free upgrade to your <a %s>operating system</a>
+
+
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+We recommend:
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Enjoy new features
+Enjoy new features
+
+
+;get the latest in security
+get the latest in security
+
+
+;Downloading a compatible browser
+Downloading a compatible browser
+
+
+;Stay safe online
+Stay safe online
