l10n: nl, updated contribute page, translation by Ton
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109579 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/mozorg/contribute.lang
+++ b/nl/mozorg/contribute.lang
@@ -1,130 +1,130 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+Meehelpen: mogelijkheden voor vrijwilligers bij Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Deze video vereist een browser met ondersteuning voor open video of de <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+U hoeft geen C++-goeroe te zijn (of zelfs te weten wat dat is!) om mee te helpen.<br><b>U hoeft alleen van het web te houden.</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+Voer een geldig e-mailadres in.
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+U moet akkoord gaan met het privacybeleid.
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Selecteer een interessegebied.
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Vertel ons meer over uw interesses.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Uw CAPTCHA-antwoord kwam niet overeen. Probeer het nogmaals.
 
 
 ;Want to help?
-Want to help?
+Wilt u helpen?
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+UW E-MAILADRES
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Verzenden&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Stuur ons een briefje en we helpen u meteen op weg.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+Hallo, ik ben geïnteresseerd in…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Ik wil graag regelmatig medewerkersnieuws ontvangen per e-mail
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Bedankt voor uw reactie.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Iemand van Mozilla zal u spoedig voorzien van informatie over hoe u kunt meehelpen. Terwijl u wacht, kunt u hieronder een aantal mogelijkheden voor vrijwilligers bekijken.
 
 
 ;Find an opportunity
-Find an opportunity
+Mogelijkheden vinden
 
 
 ;Sort By:
-Sort By:
+Rangschikken op:
 
 
 ;Interest
-Interest
+Interesse
 
 
 ;Location
-Location
+Locatie
 
 
 ;Newsletter
-Newsletter
+Nieuwsbrief
 
 
 ;Helping Users
-Helping Users
+Gebruikers helpen
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+Interesse in het helpen van anderen om ze het meeste uit Firefox en andere Mozilla-projecten te halen? Ons ondersteuningsproces is afhankelijk van enthousiaste medewerkers zoals u.
 
 
 
 ;Quality Assurance
-Quality Assurance
+Kwaliteitscontrole
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+Het testen voor kwaliteitscontrole is een van de makkelijkste manieren om met Mozilla te aan de slag te gaan en een goede manier om met onze code en hulpmiddelen vertrouwd te raken.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Help mee bij het <a href="http://quality.mozilla.org/teams/desktop-firefox/">vinden van bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">testen van Mozilla-websites</a> of lees meer over <a href="http://quality.mozilla.org/">andere testmogelijkheden</a>.
 
 
 ;Coding
-Coding
+Code schrijven
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+<a href="https://developer.mozilla.org/en/Introduction">Ontwikkelaars kunnen Mozilla helpen</a> door nieuwe functies toe te voegen, wat onze technologie kleiner en sneller maakt en ontwikkeling voor anderen vereenvoudigt.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+Veel ontwikkelaars zijn op <a href="http://irc.mozilla.org">IRC</a> te vinden, dus kom langs en stel vragen voor meer informatie. Onze websites zijn ook <a href="http://blog.mozilla.com/webdev/get-involved/">open voor webninja’s</a> voor hackdoeleinden.
 
 
 ;Spread the Word
-Spread the Word
+Zegt het voort
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+Help ons bekend te maken hoe Firefox en andere Mozilla-projecten voor een beter internet zorgen. Deel Firefox met de wereld door <a href="https://affiliates.mozilla.org">een partner te worden</a> en bekijk daarna onze <a href="https://wiki.mozilla.org/MarketingGuide">Marketinggids</a> voor meer manieren om betrokken te raken.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+Informatie over <a href="/contribute/areas.html">meer interessegebieden…</a>
 
 
 ;map
@@ -132,23 +132,23 @@ map
 
 
 ;US and Canada
-US and Canada
+VS en Canada
 
 
 ;Europe
-Europe
+Europa
 
 
 ;Latin America
-Latin America
+Latijns-Amerika
 
 
 ;Africa and the Middle East
-Africa and the Middle East
+Afrika en het Midden-Oosten
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
+Azië en Zuid-Pacifisch gebied
 
 
 ;Antarctica
@@ -156,18 +156,18 @@ Antarctica
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+Registreer u voor een wekelijkse nieuwsbrief die vol staat met nieuws over de gemeenschap en mogelijkheden voor vrijwilligers.
 
 
 ;Thank you!
-Thank you!
+Dank u!
 
 
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+U kunt ook onderdeel worden van ons <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> door gebruikers te helpen op Twitter.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Lees meer over het <a href="https://support.mozilla.org/kb/superheroes-wanted">ondersteunen van Firefox</a> en <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> users.
