l10n:lij locale main.lang new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109580 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/main.lang
+++ b/lij/main.lang
@@ -418,16 +418,16 @@ Privacy{ok}
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Pàrte de sti contegnûi són fæti de persónn-e che colàboran co-o mozilla.org inti ànni ©1998–%(current_year)s. I contegnûi són a dispoxiçión sótta 'na <a href="%(url)s">licénsa Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Contribùisci a sta pàgina
 
 
 # Top menu item
 ;Mission
-Mission
+Misción
 
 
