--- a/ast/main.lang
+++ b/ast/main.lang
@@ -418,16 +418,17 @@ Privacidá
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Dalgunos conteníos tán protexíos polos drechos d'autor ©1998–%(current_year)s de determinaos collaboradores en mozilla.org. El restu del conteníu ta disponible baxo una llicencia <a href="%(url)s">Creative Commons</a>.
+
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Collabora nesta páxina
 
 
 # Top menu item
 ;Mission
-Mission
+Misión
 
 
