update main.lang and partners.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109584 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/main.lang
+++ b/es-AR/main.lang
@@ -418,16 +418,16 @@ Privacidad
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Partes de este contenido son ©1998–%(current_year)s de contribuyentes individuales de mozilla.org. El contenido se encuentra disponible bajo una <a href="%(url)s">licencia Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Contribuye con esta página
 
 
 # Top menu item
 ;Mission
-Mission
+Misión
 
 
