--- a/es-AR/marketplace/partners.lang
+++ b/es-AR/marketplace/partners.lang
@@ -5,7 +5,7 @@ Generá una base de fans pronto y ganá en popularidad.
 
 
 ;Opening Soon
-Abre pronto
+Próximamente
 
 
 ;Mozilla Marketplace Partners
@@ -53,7 +53,7 @@ Antes del lanzamiento al público a fines de año, Mozilla abrirá el Marketplac
 
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
-Mozilla Marketplace — <em>Abre pronto</em>
+Mozilla Marketplace — <em>Próximamente</em>
 
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
