--- a/nl/mozorg/contribute.lang
+++ b/nl/mozorg/contribute.lang
@@ -43,7 +43,7 @@ Verzenden&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Stuur ons een briefje en we helpen u meteen op weg.
+Stuur ons een berichtje en we helpen u meteen op weg.
 
 
 ;Hi, I’m interested in…
@@ -170,4 +170,4 @@ U kunt ook onderdeel worden van ons <a href="https://support.mozilla.org/army-of
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Lees meer over het <a href="https://support.mozilla.org/kb/superheroes-wanted">ondersteunen van Firefox</a> en <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> users.
+Lees meer over het <a href="https://support.mozilla.org/kb/superheroes-wanted">ondersteunen van Firefox</a>- en <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a>-gebruikers.
