--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -1,12 +1,10 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
-Haayoo! Firefox maa hesɗitii.
+Haayoo! Firefox maa hesɗitii haŋkadi.
 
 
 ;Your Firefox is out of date.
-Firefox maa ko kiituɗo.
+Firefox maa ko kiiɗtuɗo.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
@@ -45,7 +43,7 @@ Jooni golle maa <br/>ɓeydoo yaawde
 Ɓeydo dillude
 
 
-;Get Firefox » <b>for Android</b>
+;Get Firefox » <b>for Android</b>
 Heɓ Firefox » <b>mo Android</b>
 
 
@@ -62,11 +60,11 @@ Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondir
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, e,a yuɓɓi, ena hisi!
+<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, ena yuɓɓi, ena hisi!
 
 
 ;Now get the mobile browser that’s got your back
-Jooni heɓ wanngorde cinndel wona nafoore maa
+Jooni heɓ wanngorde cinndel ko nafoore mehre-mehre
 
 
 ;Firefox Features
@@ -89,11 +87,9 @@ Natal Firefox mo Android
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Jaawɗum. Juɓɓuɗum. Kisaɗum.
+Jaawɗum. Juɓɓuɗum. Kisɗum.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Geɓ wanngorde cinndel wona nafoore maa.
-
-
+Heɓ wanngorde cinndel ko nafoore mehre-mehre.
