Luganda: Add comments
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109611 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lg/home.lang
+++ b/lg/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Kifule Ekikyo
 
@@ -26,6 +27,7 @@ Tukukuma ku mugongo.
 Funa Firefox ku simu yo!
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Ekoledwa nga ya kugabana.
 
@@ -42,6 +44,7 @@ Kyusa nga bwo kyagala <br/> okukyongeramu <br/> obwangu
 Funa ebyongrwako <br/> era okifule <br/> ekyangu
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Kikola nyo <br /> oleme obuta kola.
 
@@ -58,6 +61,7 @@ Kyangu okutuka <br/> awaddirira
 Ebyongerwako <br/> ebiyamba mumirimu jjo
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Ekolebwa <br/> engeri gyo zanya mu.
 
@@ -70,6 +74,7 @@ Ebifananyi mu <br/> 3D
 Enkola eyisigika <br/> no okusingawo
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Okwekyusiza <br/> okutaliko kulafubana
 
@@ -78,6 +83,7 @@ Okwekyusiza <br/> okutaliko kulafubana
 Ebyokwerinda <br/> ebyawagulu
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Ebifananyi <br/> ebyawagulu
 
