l10n: add contribute items
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109618 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/en-GB/mozorg/contribute.lang
+++ b/en-GB/mozorg/contribute.lang
@@ -218,3 +218,83 @@ Help build a generation of webmakers&mdash;moving people from using the web maki
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
 Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+
+
+;Area of interest?
+Area of interest?
+
+
+;I need help with a Firefox issue
+I need help with a Firefox issue
+
+
+;An error occurred in our system. Please try again later.
+An error occurred in our system. Please try again later.
+
+
+;I have a suggestion for Firefox
+I have a suggestion for Firefox
+
+
+;Facebook
+Facebook
+
+
+;Education
+Education
+
+
+;Firefox Affiliates
+Firefox Affiliates
+
+
+;Developer Documentation
+Developer Documentation
+
+
+;Mozilla
+Mozilla
+
+
+;Thank you for signing up!
+Thank you for signing up!
+
+
+;Menu
+Menu
+
+
+;Web Development
+Web Development
+
+
+;You must agree to the privacy policy
+You must agree to the privacy policy
+
+
+;Visual Design
+Visual Design
+
+
+;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+
+
+;Twitter
+Twitter
+
+
+;We are sorry, but there was a problem with our system. Please try again later!
+We are sorry, but there was a problem with our system. Please try again later!
+
+
+;Other
+Other
+
+
+;Marketing
+Marketing
+
+
+;Testing and QA
+Testing and QA
