[br] New localized strings for lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109681 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/main.lang
+++ b/br/main.lang
@@ -408,26 +408,29 @@ Trevnadoù skoret
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Petra zo nevez
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Buhez prevez
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
 Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Lodennoù an endalc'had-mañ 
+gant perzhidi hiniennel eus mozilla.org
+Endalc'had hegerz dindan termenoù al <a href="%(url)s">lañvaz Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Kemer perzh e-barzh ar bajenn-mañ
 
 
 # Top menu item
 ;Mission
-Mission
+Kefridi
 
 
