--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -130,18 +130,18 @@ Firefox en deus keweriusterioù nevez evit tremen d'un eil trevell d'egile herre
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Plijout a ra deoc'h Firefox Beta ? <a href="%s">Pedit ho mignoned</a> da gaout un alberz eus dazont Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Arverañ a ran Firefox Beta evit kaout un alberz eus ar c'heweriusterioù diwezhañ hag an nevezintioù a zeuio bremaik war Firefox. <a href="%s">Esaeit anezhañ</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Trugarez evit reiñ sikour da lakaat Firefox da vezañ dreistordinaloc'h en ur arverañ Firefox Beta. Bremañ, <a href="%s">pedit ho mignoned</a> da esaeañ anezhañ.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Arverañ a ran Firefox Beta evit reiñ skoazell da amprouiñ ar c'heweriusterioù diwezhañ ha lakaat Firefox da vezañ dreistordinaloc'h. <a href="%s">Esaeit anezhañ</a>.
 
 
