--- a/br/whatsnew.lang
+++ b/br/whatsnew.lang
@@ -62,38 +62,38 @@ Haneilet eo bet ar robot Android diouzh un oberenn krouet ha <a href="%s">rannet
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Ho pezet Firefox evit Android</a> ha lakait galloud ar Web e-barzh ho taouarn. Herrek, speredek ha diogel eo !
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Ho pezet bremañ ar merdeer hezoug a warez ac'hanoc'h
 
 
 ;Firefox Features
-Firefox Features
+Keweriusterioù Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Donemat war Firefox
 
 
 ;Firefox Help
-Firefox Help
+Skoazell Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Skeudenn eus Firefox evit Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Herrek. Speredek. Diogel.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Ho pezet ar merdeer hezoug a warez ac'hanoc'h
 
 
