--- a/zh-TW/mozorg/contribute.lang
+++ b/zh-TW/mozorg/contribute.lang
@@ -1,5 +1,5 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-參與我們: Volunteer Opportunities at Mozilla
+參與我們: Mozilla 的志願貢獻機會
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
@@ -7,7 +7,7 @@
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-您不需要是 C++ 達人（就算根本不知道那是什麼也行) 就能加入我們。<br><b>您唯一需要的能力是熱愛網路。</b>
+您不需要是 C++ 達人（就算根本不知道那是什麼也行）就能加入我們。<br><b>您唯一需要的能力是熱愛網路。</b>
 
 
 ;Please enter a valid email address.
@@ -171,67 +171,67 @@
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+有興趣幫助其他 Firefox 或其他 Mozilla 產品的使用者嗎？我們的技術支援過程需要像您這樣的熱情使用者。請在此參考如何支援 <a href="%(fx_support_url)s">Firefox</a> 與 <a href="%(tb_support_url)s">Thunderbird</a> 使用者的資訊。您也可以加入我們的 <a href="%(army_url)s">Army of Awesome</a>，在 Twitter 上幫助其他使用者。
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+我們相信廣泛流傳的好作品的威力，想要讓藝術家們可以透過由 Mozilla 所啟發的作品一起來守護網路與使用者。請參與 <a href="%(creative_url)s">集體創意挑戰</a> 或 <a href="%(zazzle_url)s">投稿 T 恤設計</a> 到我們的社群商店。
 
 
 ;Localization
-Localization
+在地化
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+易用性是關於如何讓東西可以被每個人使用的方法。請幫助 <a href="%(access_url)s">建立工具與資源讓身體不方便的 Firefox 的使用者</a> 並幫助 <a href="%(access_wiki)s">讓網頁內容可以被諸如螢幕閱讀器等非視覺性的輔助工具</a> 讀取。
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a href="%(dev_intro_url)s">開發者可以</a> 透過新增功能或是讓我們的技術變得更小、效能更高，讓開發過程變得更簡單來幫助 Mozilla。您可以在 <a href="%(irc_url)s">IRC</a> 上找到許多開發者，歡迎您上去問問題或跟其他人聊天。我們的網站也 <a href="%(webdev_blog)s">開放網頁忍者</a> 幫忙修改。
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+請幫助我們宣傳 Firefox 與其他 Mozilla 產品如何打造一個更好的網路環境。透過 <a href="%(affiliates_url)s">成為好夥伴</a> 向世界分享 Firefox 的資訊。您也可以參考我們的 <a href="%(marketing_url)s">行銷指南</a> 當中其他不同的參與方式。
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+品保測試是最簡單能夠參與 Mozilla 的方式，讓您可以熟悉我們的程式碼與工具。請幫助我們 <a href="%(qa_bugs_url)s">解決 Firefox 的 bug</a>、<a href="%(qa_web_url)s">測試 Mozilla 網站</a>，以及瞭解 <a href="http://quality.mozilla.org/">其他的測試機會</a>。
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+成為研究團隊中的一員 &mdash; 您是否想成為 <a href="%(survey_url)s">未來研究的受試者</a>、<a href="%(test_email)s">主導一場使用性測試</a>，或是 <a href="%(test_pilot)s">分析 Test Pilot 的資料</a>？ &mdash; 希望您能加入我們！
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+透過讓 Firefox、Thunderbird 以及其他專案 <a href="%(l10n_url)s">有您的語言版本</a> 來參與 Mozilla。也請透過 <a href="%(l10n_web_url)s">翻譯我們的網站內容</a> 來讓世界知道 Mozilla 正在打造一個更好的網際網路。
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Mozilla Developer Network 是 Mozilla 技術資訊與技術文件的集散地。請幫助 <a href="%(dev_url)s">撰寫新內容</a>、修正現有的文章內容，或是將內容翻譯為不同語言來改善文件。
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+透過教導其他人如何寫程式以及網頁的技術原理，幫助打造 Webmaker 的世代 &mdash;讓人們從使用網路變成打造網路 &mdash;。<a href="%(moz_webmaker)s ">了解 Mozilla Webmaker 究竟在做什麼</a>，或開始在 <a href="%(webmaker)s">您的社區舉辦活動</a> 來教其他朋友。
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox 與其他 Mozilla 為基礎的應用程式有個強大的擴充套件系統，讓您可以針對這些程式做小修改或是新增大功能。若您剛接觸此技術，可以學習如何 <a href="%(addons_url)s">打造附加元件</a>。有經驗的開發者們則可以試著 <a href="%(addons_wiki)s">成為 AMO 編輯</a>。
 
 
 ;Area of interest?
-Area of interest?
+有興趣的領域？
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+我遇到了 Firefox 的問題，需要幫助
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+我們的系統發生了問題。請稍後再試一次。
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+我有關於 Firefox 的建議
 
 
 ;Facebook
@@ -239,15 +239,15 @@ Facebook
 
 
 ;Education
-Education
+教育
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Firefox 夥伴計畫
 
 
 ;Developer Documentation
-Developer Documentation
+開發者文件
 
 
 ;Mozilla
@@ -255,27 +255,27 @@ Mozilla
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+感謝您的登記！
 
 
 ;Menu
-Menu
+選單
 
 
 ;Web Development
-Web Development
+網頁開發
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+您必須同意隱私權保護政策
 
 
 ;Visual Design
-Visual Design
+視覺設計
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+我同意你依照 <a href="%s">隱私權保護政策</a> 上面所記載的方式使用此資訊
 
 
 ;Twitter
@@ -283,18 +283,18 @@ Twitter
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+很抱歉，我們的系統發生了一點問題。請稍後再試一次！
 
 
 ;Other
-Other
+其他
 
 
 ;Marketing
-Marketing
+行銷
 
 
 ;Testing and QA
-Testing and QA
+測試與品保
 
 
