Add {ok} to identical strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109683 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/mozorg/contribute.lang
+++ b/zh-TW/mozorg/contribute.lang
@@ -235,7 +235,7 @@ Firefox 與其他 Mozilla 為基礎的應用程式有個強大的擴充套件系
 
 
 ;Facebook
-Facebook
+Facebook {ok}
 
 
 ;Education
@@ -251,7 +251,7 @@ Firefox 夥伴計畫
 
 
 ;Mozilla
-Mozilla
+Mozilla {ok}
 
 
 ;Thank you for signing up!
@@ -279,7 +279,7 @@ Mozilla
 
 
 ;Twitter
-Twitter
+Twitter {ok}
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
