--- a/cs/main.lang
+++ b/cs/main.lang
@@ -418,16 +418,16 @@ Soukromí
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Části tohoto obsahu jsou ©1998–%(current_year)s jednotlivými přispěvateli mozilla.org. Obsah je dostupný pod <a href="%(url)s">licencí Creative Commons</a>. 
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Přispět k této stránce
 
 
 # Top menu item
 ;Mission
-Mission
+Mise
 
 
